docs/test update